--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,21 +7,10 @@
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/sk"
+        android:src="@drawable/studying"
         tools:ignore="ContentDescription" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
-        android:gravity="center_horizontal"
-        android:text="Расписание занятий"
-        android:textColor="#1d1d1d"
-        android:textSize="25sp"
-        tools:ignore="HardcodedText" />
 
 </RelativeLayout>
