--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#F57C00</color>
     <color name="colorAccent">#e53935</color>
 
-    <color name="colorLightBar">#ffffff</color>
+    <color name="colorLightBar">#FFFFFF</color>
     <color name="colorLightStatus">#9E9E9E</color>
 
     <color name="colorIconLight">#616161</color>
