--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,6 +37,14 @@
                 android:id="@+id/zaochnoe_a"
                 android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                 android:title="@string/zaochnoe_a" />
+            <item
+                android:id="@+id/zaochnoe_c"
+                android:icon="@drawable/ic_picture_as_pdf_black_24dp"
+                android:title="@string/zaochnoe_c" />
+            <item
+                android:id="@+id/zaochnoe_d"
+                android:icon="@drawable/ic_picture_as_pdf_black_24dp"
+                android:title="@string/zaochnoe_d" />
         </menu>
     </item>
 
