--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,6 +37,10 @@
                 android:id="@+id/zaochnoe_a"
                 android:icon="@drawable/ic_picture_as_pdf_black_24dp"
                 android:title="@string/zaochnoe_a" />
+            <item
+                android:id="@+id/zaochnoe_b"
+                android:icon="@drawable/ic_picture_as_pdf_black_24dp"
+                android:title="@string/zaochnoe_b" />
         </menu>
     </item>
 
@@ -54,6 +58,10 @@
                 android:id="@+id/timing"
                 android:icon="@drawable/ic_timetable_grey600_24dp"
                 android:title="@string/timing" />
+            <item
+                android:id="@+id/phonebookipd1"
+                android:icon="@drawable/ic_contacts_grey600_24dp"
+                android:title="@string/phonebookipd" />
             <item
                 android:id="@+id/activiti_scrol"
                 android:icon="@drawable/ic_info_black_24dp"
