--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -71,6 +71,10 @@
                 android:icon="@drawable/ic_info_black_24dp"
                 android:title="Информация" />
             <item
+                android:id="@+id/rating"
+                android:icon="@drawable/ic_thumb_up_outline_grey600_24dp"
+                android:title="@string/rating" />
+            <item
                 android:id="@+id/intern"
                 android:icon="@drawable/ic_google_chrome_grey600_24dp"
                 android:title="uoipd.by" />
