--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,12 +19,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
-        android:text="Минск, ул.Серафимовича,11"/>
+        android:text="@string/a3"/>
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
-        android:text="Открыто пн-пт 9:00–17:00"/>
+        android:text="@string/a4"/>
 
 </LinearLayout>
